# mdslides-mcp-server

./: .gitignore  Dockerfile  README.md  deploy_mcp_docker.sh  pyproject.toml
docs/: creating_slides.md
src/mdslides_mcp_server/: server.py
src/mkslides_mcp_server/: server.py
tests/: test_server.py
